add resume link and change skills title font size

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <p>I enjoy challenging myself to complex problems and turning them into simple, useful designs. I am continuously seeking opportunities to learn new technologies and broaden my knowledge. My attention to detail, problem-solving nature,
                         and strong work ethic have created a passion in me that makes each day exciting. I would like to create products that add value to others and making a meaningful impact.
                     </p>
-                    <button id="resume" class="btn btn-outline-primary">Resume</button>
+                    <a href="https://drive.google.com/file/d/1EjbBfCw6Swdysj5hJSJe9HmmGPs027un/view?usp=sharing" target="_blank" class="btn btn-outline-primary">Download Resume</a>
 
                 </div>
                 <div class="col-md-4 col-sm-0 col-xs-0 d-none d-md-block d-lg-block">
@@ -194,7 +194,7 @@
                 </div>
 
                 <div class="col-md-4 col-sm-6 col-xs-12 ">
-                    <h2 class="text-center" style="font-family: 'Montserrat', sans-serif;">My Skills</h2>
+                    <h3 class="text-center" style="font-family: 'Montserrat', sans-serif;">My Skills</h3>
                     <div class="skillscontainer">
                         <!-- First bar -->
                         <div class="bar" data-percentage="95%">
@@ -364,8 +364,8 @@
                                 <div class="img-text">
                                     <!-- <h2>Project one</h2> -->
                                     <p>A virtual art gallery website with a dummy shopping cart checkout. User can learn about famous art works, artists, and museums. <br><strong style="text-decoration: underline;">Created with:</strong> HTML/CSS and PHP</p>
-                                    <a id="btn-xs" class="btn btn-outline-primary" href="https://www.cs.ryerson.ca/~pnkapadi/cps630/assign2/a2.html" target="_blank">Demo</a>
-                                    <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/ArtGallery" target="_blank">Github</a>
+                                    <a id="btn-xs" class="btn btn-outline-primary" href="http://www2.scs.ryerson.ca/~ndachary/cps630/AssignmentI2/search1.php" target="_blank">Demo</a>
+                                    <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/art-gallery" target="_blank">Github</a>
 
                                 </div>
                             </div>
