add technologies, remove skills bar, fix formatting about me section

--- a/index.html
+++ b/index.html
@@ -171,12 +171,21 @@
 
 
     <section id="about">
-        <div class="container">
+        <div class="container" style="padding-top: 5rem; padding-bottom: 8rem;">
             <!-- <div class="col-md-12"> -->
             <h1 id="titleabout" class="text-center pt-5 mb-4">About Me</h1>
 
             <div class="row">
-                <div class="col-md-4 col-sm-6 col-xs-12 " data-aos="fade">
+                <!-- <div class="col-md-1"></div> -->
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <!-- <div class="col-md-4 col-sm-0 col-xs-0 d-none d-md-block d-lg-block"> -->
+                    <!-- <div class="col-md-4 col-sm-6 d-none d-sm-block d-md-block d-lg-block"> -->
+                    <!-- <div class="container"> -->
+                    <img id="mypicture" src="/stylesheets/me.jpg" alt="">
+                    <!-- </div> -->
+                </div>
+                <div class="col-lg-8 col-md-6 col-sm-6 col-xs-12" data-aos="fade">
+                    <!-- <div class="col-md-4 col-sm-6 col-xs-12 " data-aos="fade"> -->
                     <!-- <div class="col-md-4 col-xs-0 d-none d-md-block d-lg-block"> -->
                     <p>
                         My name is Nishita Acharya and I am an aspiring full stack developer. I completed my Bachelor's degree in Computer Science at Ryerson University. </p>
@@ -186,104 +195,174 @@
                     <a href="https://drive.google.com/file/d/1EjbBfCw6Swdysj5hJSJe9HmmGPs027un/view?usp=sharing" target="_blank" class="btn btn-outline-primary">Download Resume</a>
 
                 </div>
-                <div class="col-md-4 col-sm-0 col-xs-0 d-none d-md-block d-lg-block">
-                    <!-- <div class="col-md-4 col-sm-6 d-none d-sm-block d-md-block d-lg-block"> -->
-                    <div class="container">
-                        <img id="mypicture" src="/stylesheets/me.jpg" alt="">
-                    </div>
-                </div>
 
-                <div class="col-md-4 col-sm-6 col-xs-12 ">
-                    <h3 class="text-center" style="font-family: 'Montserrat', sans-serif;">My Skills</h3>
-                    <div class="skillscontainer">
-                        <!-- First bar -->
-                        <div class="bar" data-percentage="95%">
+                <!-- <div class="col-md-1"></div> -->
+
+
+
+                <!-- <div class="col-md-4 col-sm-6 col-xs-12 ">
+                    <h3 class="text-center" style="font-family: 'Montserrat', sans-serif;">My Skills</h>
+                    <div class="skillscontainer"> -->
+                <!-- First bar -->
+                <!-- <div class="bar" data-percentage="95%">
                             <h4 class="progress-title-holder">
                                 <span class="progress-title">HTML5/CSS</span>
                             </h4>
                             <div class="progress-content-outter">
                                 <div class="progress-content"></div>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <!-- Second bar -->
-                        <div class="bar" data-percentage="75%">
+                <!-- Second bar -->
+                <!-- <div class="bar" data-percentage="75%">
                             <h4 class="progress-title-holder clearfix">
                                 <span class="progress-title">Javascript</span>
                             </h4>
                             <div class="progress-content-outter">
                                 <div class="progress-content"></div>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <!-- Third bar -->
-                        <div class="bar" data-percentage="90%">
+                <!-- Third bar -->
+                <!-- <div class="bar" data-percentage="90%">
                             <h4 class="progress-title-holder clearfix">
                                 <span class="progress-title">Java</span>
                             </h4>
                             <div class="progress-content-outter">
                                 <div class="progress-content"></div>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <!-- Fourth bar -->
-                        <div class="bar" data-percentage="60%">
+                <!-- Fourth bar -->
+                <!-- <div class="bar" data-percentage="60%">
                             <h4 class="progress-title-holder clearfix">
                                 <span class="progress-title">PHP</span>
                             </h4>
                             <div class="progress-content-outter">
                                 <div class="progress-content"></div>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <!-- Fifth bar -->
-                        <div class="bar" data-percentage="90%">
+                <!-- Fifth bar -->
+                <!-- <div class="bar" data-percentage="90%">
                             <h4 class="progress-title-holder clearfix">
                                 <span class="progress-title">NodeJS</span>
                             </h4>
                             <div class="progress-content-outter">
                                 <div class="progress-content"></div>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <!-- Sixth bar -->
-                        <div class="bar" data-percentage="80%">
+                <!-- Sixth bar -->
+                <!-- <div class="bar" data-percentage="80%">
                             <h4 class="progress-title-holder clearfix">
                                 <span class="progress-title">SQL</span>
                             </h4>
                             <div class="progress-content-outter">
                                 <div class="progress-content"></div>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <!-- Seventh bar -->
-                        <div class="bar" data-percentage="85%">
+                <!-- Seventh bar -->
+                <!-- <div class="bar" data-percentage="85%">
                             <h4 class="progress-title-holder clearfix">
                                 <span class="progress-title">MongoDB</span>
                             </h4>
                             <div class="progress-content-outter">
                                 <div class="progress-content"></div>
                             </div>
-                        </div>
+                        </div> -->
 
-                        <!-- Eighth bar -->
-                        <div class="bar" data-percentage="85%">
+                <!-- Eighth bar -->
+                <!-- <div class="bar" data-percentage="85%">
                             <h4 class="progress-title-holder clearfix">
                                 <span class="progress-title">Express</span>
                             </h4>
                             <div class="progress-content-outter">
                                 <div class="progress-content"></div>
                             </div>
-                        </div>
+                        </div> -->
 
 
-                    </div>
+                <!-- </div> -->
 
-                </div>
             </div>
+            <!-- </div> -->
             <!-- </div> -->
         </div>
 
+
+
+        <section id="technologies" style="background-color: #2A2A2A">
+            <div class="container py-3">
+                <div class="card" id="langs" style="border: none;">
+                    <div class="card-header" style="background-color: rgba(177, 177, 177, 0.6);">
+                        <h4>Programming Languages</h4>
+                    </div>
+                    <div class="card-body">
+                        <div data-aos="fade" class="col-md-2 card-img"><img id="html" src="/stylesheets/html5.svg" alt="">
+                            <div class="card-text">HTML5</div>
+                        </div>
+                        <div data-aos="fade" class="col-md-2 card-img"><img id="css" src="stylesheets/css.svg">
+                            <div class="card-text">CSS3</div>
+                        </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="js" src="stylesheets/javascript.svg" />
+                            <div class="card-text">JavaScript</div>
+                        </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="java" src="stylesheets/Java_logo.png" />
+                            <div class="card-text">Java</div>
+                        </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="php" src="stylesheets/php.svg" />
+                            <div class="card-text">PHP</div>
+                        </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="csharp" src="stylesheets/csharp.svg" />
+                            <div class="card-text">C#</div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="card mt-3" id="database">
+                    <div class="card-header" style="background-color: rgba(177, 177, 177, 0.6);">
+                        <h4>Database</h4>
+                    </div>
+                    <div class="card-body">
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="mongodb" src="stylesheets/mongo.svg" />
+                            <div class="card-text">MongoDB</div>
+                        </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="sql" src="stylesheets/sql.png" />
+                            <div class="card-text">SQL</div>
+                        </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="firebase" src="stylesheets/firebase.png" />
+                            <div class="card-text">firebase</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mt-3" id="tools">
+                    <div class="card-header" style="background-color: rgba(177, 177, 177, 0.6);">
+                        <h4>Tools & others</h4>
+                    </div>
+                    <div class="card-body">
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="node" src="stylesheets/node.png" />
+                            <div class="card-text">NodeJS</div>
+                        </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="express" src="stylesheets/express.svg" />
+                            <div class="card-text">Express.js</div>
+                        </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="heroku" src="stylesheets/heroku.svg" />
+                            <div class="card-text">Heroku</div>
+                        </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="git" src="stylesheets/git.png" />
+                            <div class="card-text">Git</div>
+                        </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="bootstrap" src="stylesheets/bootstrap.svg" />
+                            <div class="card-text">Bootstrap</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </section>
 
     <section id="projects">
@@ -526,15 +605,6 @@
                         2000
                     );
 
-                    // jQuery(this).find(".progress-number-mark").animate({
-                    //     left: jQuery(this).attr("data-percentage")
-                    // }, {
-                    //     duration: 2000,
-                    //     step: function(now, fx) {
-                    //         var data = Math.round(now);
-                    //         jQuery(this).find(".percent").html(data + "%");
-                    //     }
-                    // });
                 });
             }
         });
@@ -558,7 +628,7 @@
                 var maxWidth = 100;
                 return window.innerWidth < maxWidth;
             },
-            offset: 130,
+            offset: 100,
             duration: 1000
         });
     </script>
