add website favicon, change contact section color, edit home text

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Nishita Acharya</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="shortcut icon" href="https://img.icons8.com/ios-filled/50/000000/circled-n.png">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" /> -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -148,7 +149,7 @@
             <div id="brand" class="mr-2 mt-2 d-none d-md-block d-sm-none d-xs-done">Nishita A. <i class="fas fa-laptop-code"></i></div>
             <div id="particles-js">
                 <div class="containerintro">
-                    <h1 class=" welcome ">Welcome! I am Nishita Acharya.</h1>
+                    <h1 class=" welcome ">Hello! I am Nishita Acharya.</h1>
                     <h1 class="mytitle ">I am a Web Developer</h1>
                 </div>
 
@@ -188,7 +189,7 @@
                     <!-- <div class="col-md-4 col-sm-6 col-xs-12 " data-aos="fade"> -->
                     <!-- <div class="col-md-4 col-xs-0 d-none d-md-block d-lg-block"> -->
                     <p>
-                        My name is Nishita Acharya and I am an aspiring full stack developer. I completed my Bachelor's degree in Computer Science at Ryerson University. </p>
+                        My name is Nishita Acharya and I am an aspiring full-stack web developer. I completed my Bachelor's degree in Computer Science at Ryerson University. </p>
                     <p>I enjoy challenging myself to complex problems and turning them into simple, useful designs. I am continuously seeking opportunities to learn new technologies and broaden my knowledge. My attention to detail, problem-solving nature,
                         and strong work ethic have created a passion in me that makes each day exciting. I would like to create products that add value to others and making a meaningful impact.
                     </p>
