--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <!-- <div class="col-md-4 col-sm-0 col-xs-0 d-none d-md-block d-lg-block"> -->
                     <!-- <div class="col-md-4 col-sm-6 d-none d-sm-block d-md-block d-lg-block"> -->
                     <!-- <div class="container"> -->
-                    <img id="mypicture" src="/stylesheets/me.jpg" alt="">
+                    <img id="mypicture" src="/stylesheets/mypicture2.jpg" alt="">
                     <!-- </div> -->
                 </div>
                 <div class="col-lg-8 col-md-6 col-sm-6 col-xs-12" data-aos="fade">
