add new technologies, update resume, about me, and home page

--- a/index.html
+++ b/index.html
@@ -22,115 +22,6 @@
 </head>
 
 <body>
-    <header>
-        <!-- <div class="mobile-container">
-            <div class="topnav">
-                <a onclick="myFunction()" class="d-none d-sm-block d-xs-block">Logo</a>
-                <a href="javascript:void(0);" class="icon d-none d-sm-block d-xs-block" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
-                </a>
-                <div id="myLinks">
-                    <a href="#news">News</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#about">About</a>
-                </div>
-
-            </div>
-
-        </div> -->
-        <!-- <div class="trialnav">
-            <button type="button" class="btn btn-primary btn-sm" data-toggle="toggle" data-target="#demo">
-            <i class="glyphicon glyphicon-plus"></i>
-          </button>
-
-            <div id="demo" class="">
-                <button class="btn btn-default btn-xs" type="button">
-              <span class="glyphicon glyphicon-star"></span> Star
-            </button>
-                <button class="btn btn-default btn-xs" type="button">
-              <span class="glyphicon glyphicon-star"></span> Star
-            </button>
-                <button class="btn btn-default btn-xs" type="button">
-              <span class="glyphicon glyphicon-star"></span> Star
-            </button>
-                <button class="btn btn-default btn-xs" type="button">
-              <span class="glyphicon glyphicon-star"></span> Star
-            </button>
-            </div>
-        </div> -->
-
-        <!-- <nav id="mainNavbar" class="navbar navbar-expand-lg mb-0 bg-dark navbar-dark fixed-top">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <a class="navbar-brand" href="#">Nishita A.<i class="fas fa-laptop-code"></i></a>
-              </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a href="#home" class="nav-link">HOME</a></li>
-                    
-                    <li class="nav-item">
-                        <a class="nav-link " href="#about">ABOUT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#projects">PROJECTS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">CONTACT</a>
-                    </li>
-                </ul>
-            </div>
-
-
-        </nav> -->
-
-        <!-- <nav id="mainNavbar" class="navbar navbar-expand-lg mb-0 bg-dark navbar-dark fixed-top">
-            <a class="navbar-brand" href="#">Nishita A.<i class="fas fa-laptop-code"></i></a>
-
-
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a href="#home" class="nav-link">HOME</a></li>
-            </ul>
-            <ul class="navbar-nav navbar-right">
-                <li class="nav-item">
-                    <a class="nav-link " href="#about">ABOUT</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#projects">PROJECTS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact">CONTACT</a>
-                </li>
-            </ul>
-
-
-        </nav> -->
-
-
-    </header>
-    <!-- <header>
-        <nav id="mainNavbar" class="navbar navbar-expand-lg mb-0 bg-dark navbar-dark fixed-top">
-            <a class="navbar-brand" href="#">Nishita A.<i class="fas fa-laptop-code"></i></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a href="#home" class="nav-link">HOME</a></li>
-                </ul>
-                <ul class="navbar-nav navbar-right">
-                    <li class="nav-item">
-                        <a class="nav-link " href="#about">ABOUT</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#projects">PROJECTS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">CONTACT</a>
-                    </li>
-                </ul>
-        </nav>
-
-    </header> -->
-
 
     <section id="home">
         <div class="parallax">
@@ -150,7 +41,7 @@
             <div id="particles-js">
                 <div class="containerintro">
                     <h1 class=" welcome ">Hello! I am Nishita Acharya.</h1>
-                    <h1 class="mytitle ">I am a Web Developer</h1>
+                    <h1 class="mytitle ">Computer Science Graduate | Web Developer</h1>
                 </div>
 
                 <div class="fadingout">
@@ -189,11 +80,11 @@
                     <!-- <div class="col-md-4 col-sm-6 col-xs-12 " data-aos="fade"> -->
                     <!-- <div class="col-md-4 col-xs-0 d-none d-md-block d-lg-block"> -->
                     <p>
-                        My name is Nishita Acharya and I am an aspiring full-stack web developer. I completed my Bachelor's degree in Computer Science at Ryerson University. </p>
+                        My name is Nishita Acharya and I am a Computer Science graduate from at Ryerson University. </p>
                     <p>I enjoy challenging myself to complex problems and turning them into simple, useful designs. I am continuously seeking opportunities to learn new technologies and broaden my knowledge. My attention to detail, problem-solving nature,
                         and strong work ethic have created a passion in me that makes each day exciting. I would like to create products that add value to others and making a meaningful impact.
                     </p>
-                    <a href="https://drive.google.com/file/d/1mhFGdusuiiYVdY12Dj9dvm2CQKakW6Td/view?usp=sharing" target="_blank" class="btn btn-outline-primary">Download Resume</a>
+                    <a href="https://drive.google.com/file/d/1I4Zx6OUHQssgWBbimOH4GTHCL6Q7DjUn/view?usp=sharing" target="_blank" class="btn btn-outline-primary">Download Resume</a>
 
                 </div>
 
@@ -319,6 +210,9 @@
                         <div data-aos="fade" class="col-md-2 card-img "><img id="csharp" src="stylesheets/csharp.svg" />
                             <div class="card-text">C#</div>
                         </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="csharp" src="stylesheets/python.svg" />
+                            <div class="card-text">Python</div>
+                        </div>
                     </div>
 
                 </div>
@@ -336,6 +230,9 @@
                         </div>
                         <div data-aos="fade" class="col-md-2 card-img "><img id="firebase" src="stylesheets/firebase.png" />
                             <div class="card-text">firebase</div>
+                        </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="sqldev" src="stylesheets/sqldev.png" />
+                            <div class="card-text">Oracle SQL Developer</div>
                         </div>
                     </div>
                 </div>
@@ -360,6 +257,10 @@
                         <div data-aos="fade" class="col-md-2 card-img "><img id="bootstrap" src="stylesheets/bootstrap.svg" />
                             <div class="card-text">Bootstrap</div>
                         </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="tableau" src="stylesheets/tableausimple.png" />
+                            <div class="card-text">Tableau</div>
+                        </div>
+
                     </div>
                 </div>
             </div>
