typo fix on about section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <!-- <div class="col-md-4 col-sm-6 col-xs-12 " data-aos="fade"> -->
                     <!-- <div class="col-md-4 col-xs-0 d-none d-md-block d-lg-block"> -->
                     <p>
-                        My name is Nishita Acharya and I am a Computer Science graduate from at Ryerson University. </p>
+                        My name is Nishita Acharya and I am a Computer Science graduate from Ryerson University. </p>
                     <p>I enjoy challenging myself to complex problems and turning them into simple, useful designs. I am continuously seeking opportunities to learn new technologies and broaden my knowledge. My attention to detail, problem-solving nature,
                         and strong work ethic have created a passion in me that makes each day exciting. I would like to create products that add value to others and making a meaningful impact.
                     </p>
