adding ML project image

--- a/index.html
+++ b/index.html
@@ -365,45 +365,45 @@
                             </div>
                         </div> -->
                         <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6  mb-3">
-                            <div class="single-content" data-category="school">
-                                <img src="stylesheets/heartcode.jpg" alt="">
-                                <h3 class="title">Heart Disease Prediction with ML</h3>
-                                <div class="img-text">
-                                    <p> A machine learning model capable of predicting whether or not someone has a heart disease based on their medical attributes.</p>
-                                    <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/heart-disease-classification-ML" target="_blank">Github</a>
+                            <div class="single-content" data-category="personal"></div>
+                            <img src="stylesheets/heartcode.jpg" alt="">
+                            <h3 class="title">Heart Disease Prediction with ML</h3>
+                            <div class="img-text">
+                                <p> A machine learning model capable of predicting whether or not someone has a heart disease based on their medical attributes.</p>
+                                <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/heart-disease-classification-ML" target="_blank">Github</a>
 
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6  mb-3">
-                            <div class="single-content" data-category="school">
-                                <img src="stylesheets/connections1.jpg" alt="">
-                                <h3 class="title">Content Delivery Network</h3>
-                                <div class="img-text">
-                                    <!-- <h2>Project three</h2> -->
-                                    <p>In a group of 3, created a dummy content delivery network.<br><strong style="text-decoration: underline;">Created with:</strong> Java</p>
-                                    <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/CPS706FinalProject" target="_blank">Github</a>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mb-3">
-                            <div class="single-content" data-category="others">
-                                <img src="stylesheets/code2.jpeg" alt="">
-                                <h3 class="title">WICS Web Developer</h3>
-                                <div class="img-text">
-                                    <!-- <h2>Project three</h2> -->
-                                    <p> Took the role of Web Developer for Ryerson's Women In Computer Science group. Modified and maintained the website during the terms of Fall 2019 and Winter 2020.</p>
-                                    <a id="btn-xs" class="btn btn-outline-primary" href="http://wics.scs.ryerson.ca/" target="_blank">Demo</a>
-
-                                </div>
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6  mb-3">
+                        <div class="single-content" data-category="school">
+                            <img src="stylesheets/connections1.jpg" alt="">
+                            <h3 class="title">Content Delivery Network</h3>
+                            <div class="img-text">
+                                <!-- <h2>Project three</h2> -->
+                                <p>In a group of 3, created a dummy content delivery network.<br><strong style="text-decoration: underline;">Created with:</strong> Java</p>
+                                <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/CPS706FinalProject" target="_blank">Github</a>
 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 mb-3">
+                        <div class="single-content" data-category="others">
+                            <img src="stylesheets/code2.jpeg" alt="">
+                            <h3 class="title">WICS Web Developer</h3>
+                            <div class="img-text">
+                                <!-- <h2>Project three</h2> -->
+                                <p> Took the role of Web Developer for Ryerson's Women In Computer Science group. Modified and maintained the website during the terms of Fall 2019 and Winter 2020.</p>
+                                <a id="btn-xs" class="btn btn-outline-primary" href="http://wics.scs.ryerson.ca/" target="_blank">Demo</a>
+
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
             </div>
+
+        </div>
         </div>
         <section id="contact">
 
