--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                         </div> -->
                         <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6  mb-3">
                             <div class="single-content" data-category="personal"></div>
-                            <img src="stylesheets/heartcode.jpg" alt="">
+                            <img src="stylesheets/heart.jpg" alt="">
                             <h3 class="title">Heart Disease Prediction with ML</h3>
                             <div class="img-text">
                                 <p> A machine learning model capable of predicting whether or not someone has a heart disease based on their medical attributes.</p>
