readding ML project

--- a/index.html
+++ b/index.html
@@ -354,12 +354,10 @@
                         <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6  mb-3">
                             <div class="single-content" data-category="school">
                                 <img src="stylesheets/weather.jpg" alt="">
-                                <h3 class="title">Angular Basics</h3>
+                                <h3 class="title">Heart Disease Prediction with ML</h3>
                                 <div class="img-text">
-                                    <p> A prototype website using Angular v.9. User can see current time and date and real-time weather once authenicated with an account. <br><strong style="text-decoration: underline;">Created with:</strong> Angular, Firebase,
-                                        Travis CI, Javascript, and more.</p>
-                                    <a id="btn-xs" class="btn btn-outline-primary" href="https://cps847-finalproject.firebaseapp.com/" target="_blank">Demo</a>
-                                    <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/CPS847-GroupProject" target="_blank">Github</a>
+                                    <p> A machine learning model capable of predicting whether or not someone has a heart disease based on their medical attributes..</p>
+                                    <a id="btn-xs" class="btn btn-outline-light" href="https://github.com/nishitaaa/heart-disease-classification-ML" target="_blank">Github</a>
 
                                 </div>
                             </div>
