--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div id="particles-js">
                 <div class="containerintro">
                     <h1 class=" welcome ">Hello! I am Nishita Acharya.</h1>
-                    <h1 class="mytitle ">Computer Science Graduate | Web Developer</h1>
+                    <h1 class="mytitle ">Computer Science Graduate | Data Analyst | Web Developer</h1>
                 </div>
 
                 <div class="fadingout">
