--- a/index.html
+++ b/index.html
@@ -260,6 +260,9 @@
                         <div data-aos="fade" class="col-md-2 card-img "><img id="tableau" src="stylesheets/tableausimple.png" />
                             <div class="card-text">Tableau</div>
                         </div>
+                        <div data-aos="fade" class="col-md-2 card-img "><img id="powerbi" src="stylesheets/powerbi.png" />
+                            <div class="card-text">Power BI</div>
+                        </div>
 
                     </div>
                 </div>
